WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279225
Scoped style with :scope does not invalidate correctly
https://bugs.webkit.org/show_bug.cgi?id=279225
Summary
Scoped style with :scope does not invalidate correctly
David Shin
Reported
2024-09-05 14:05:07 PDT
Created
attachment 472471
[details]
Minimum Reproducible Case STR: Load attached test case Expected: 2 bordered divs, nested. Their background colour cycles between transparent and pink (For inner div) and purple (For outer div). Actual: Only the innermost div cycles.
Attachments
Minimum Reproducible Case
(363 bytes, text/html)
2024-09-05 14:05 PDT
,
David Shin
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-12 14:06:17 PDT
<
rdar://problem/135907710
>
Matthieu Dubet
Comment 2
2025-08-04 05:34:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48892
Matthieu Dubet
Comment 3
2025-08-06 15:40:57 PDT
***
Bug 276454
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2025-08-07 07:31:09 PDT
Committed
298335@main
(8e1c54e1fca8): <
https://commits.webkit.org/298335@main
> Reviewed commits have been landed. Closing PR #48892 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug